objects/FS_Market_ID__c.object
<CustomObject>
    <fields>
        <fullName>FS_KO_ID__c</fullName>
        <label>KO-ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Market_ID_Value__c</fullName>
        <externalId>true</externalId>
        <label>Market ID</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FS_Parent_ID_Value__c</fullName>
        <label>Parent ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
</CustomObject>